tests/paczka1/fuzzy1/90570943.err
Error in line 8: gPv2 A446 43,6
Error in line 18: Dv4 A446 78,2
